tests/error/fail_assign.gw
#! [contains] can't assign
class C extends Event{}
var Event e @=> var C o;
